upload and save car photos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=1234
 spring.liquibase.change-log=classpath:liquibase-changelog.xml
 
 spring.jpa.show-sql=true
+
+app.uploadDir="./data/carPhotos/"
