create Here client and implement method what calculate distance between two locations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.liquibase.change-log=classpath:liquibase-changelog.xml
 spring.jpa.show-sql=true
 
 app.uploadDir="./data/carPhotos/"
+
+here.apikey = A9bl-TTSmom8iNeJg_dER6UQ_txVB136p6Yg7jdkN9I
+here.user.id = HERE-5c69c4aa-4d28-454c-921c-e9cb1274bee9
+here.client.id = ZXBBZwKPOinamkGniCAQ
+here.access.key.id = nHqNajWp61tbM2sTWMbHSA
+here.access.key.secret = _PK9zcyUDGgSdjQSDisuNclzUTovG8n9gAFzXG3Xqx7uGRLbW8UnAoh4vew_KNKDORUVh2iicJz98adGTZnFUw
+here.token.endpoint.url = https://account.api.here.com/oauth2/token
