--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,6 @@ here.client.id = ZXBBZwKPOinamkGniCAQ
 here.access.key.id = nHqNajWp61tbM2sTWMbHSA
 here.access.key.secret = _PK9zcyUDGgSdjQSDisuNclzUTovG8n9gAFzXG3Xqx7uGRLbW8UnAoh4vew_KNKDORUVh2iicJz98adGTZnFUw
 here.token.endpoint.url = https://account.api.here.com/oauth2/token
+
+app.localization.distance.calculator="here"
+app.base.localization="Sochaczew"
