--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,7 @@ here.access.key.secret = _PK9zcyUDGgSdjQSDisuNclzUTovG8n9gAFzXG3Xqx7uGRLbW8UnAoh
 here.token.endpoint.url = https://account.api.here.com/oauth2/token
 
 app.localization.distance.calculator="here"
-app.base.localization="Sochaczew"
+
+spring.mvc.format.date=yyyy-MM-dd
+spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
+spring.mvc.format.time=HH:mm:ss
