add mail function with change emailSender option

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,4 +15,13 @@ here.access.key.id = nHqNajWp61tbM2sTWMbHSA
 here.access.key.secret = _PK9zcyUDGgSdjQSDisuNclzUTovG8n9gAFzXG3Xqx7uGRLbW8UnAoh4vew_KNKDORUVh2iicJz98adGTZnFUw
 here.token.endpoint.url = https://account.api.here.com/oauth2/token
 
+spring.mail.host=smtp.gmail.com
+spring.mail.properties.mail.smtp.port=587
+spring.mail.username=domino8bxd@gmail.com
+spring.mail.password=password
+spring.mail.properties.mail.transport.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 app.localization.distance.calculator="here"
+app.email.sender="emailFakeSender"
