--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,4 +24,4 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 app.localization.distance.calculator="here"
-app.email.sender="emailFakeSender"
+app.email.sender=fakeEmailService
