add users login and registration with users spring

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,6 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 app.localization.distance.calculator="here"
 app.email.sender=fakeEmailService
+
+jwt.expirationTime=259200000
+jwt.secret=%Glkgd7K27@&kkjhakjkk-ahjs
