--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,16 +6,16 @@ spring.liquibase.change-log=classpath:liquibase-changelog.xml
 
 spring.jpa.show-sql=true
 
-here.apikey = A9bl-TTSmom8iNeJg_dER6UQ_txVB136p6Yg7jdkN9I
-here.user.id = HERE-5c69c4aa-4d28-454c-921c-e9cb1274bee9
-here.client.id = ZXBBZwKPOinamkGniCAQ
-here.access.key.id = nHqNajWp61tbM2sTWMbHSA
-here.access.key.secret = _PK9zcyUDGgSdjQSDisuNclzUTovG8n9gAFzXG3Xqx7uGRLbW8UnAoh4vew_KNKDORUVh2iicJz98adGTZnFUw
-here.token.endpoint.url = https://account.api.here.com/oauth2/token
+here.apikey=A9bl-TTSmom8iNeJg_dER6UQ_txVB136p6Yg7jdkN9I
+here.user.id=HERE-5c69c4aa-4d28-454c-921c-e9cb1274bee9
+here.client.id=ZXBBZwKPOinamkGniCAQ
+here.access.key.id=nHqNajWp61tbM2sTWMbHSA
+here.access.key.secret=_PK9zcyUDGgSdjQSDisuNclzUTovG8n9gAFzXG3Xqx7uGRLbW8UnAoh4vew_KNKDORUVh2iicJz98adGTZnFUw
+here.token.endpoint.url=https://account.api.here.com/oauth2/token
 
 spring.mail.host=smtp.gmail.com
 spring.mail.properties.mail.smtp.port=587
-spring.mail.username=domino8bxd@gmail.com
+spring.mail.username=email
 spring.mail.password=password
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
