rename package carrent

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,4 @@ app.localization.distance.calculator="here"
 app.email.sender=fakeEmailService
 
 jwt.expirationTime=259200000
-jwt.secret=%Glkgd7K27@&kkjhakjkk-ahjs
+jwt.secret=%Glkgd7K27@&kkjhakjkk-ahjj
